# SitoPBG-Django

./: README.md  manage.py  pyproject.toml
corsi/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
corsi/migrations/: 0001_initial.py  0002_serata.py
corsi/templates/corsi/: lista_corsi.html
sito_pgb/: asgi.py  settings.py  urls.py  wsgi.py
templates/: _base.html
